tests/tactics/fail/0004-clear.ec
(* -------------------------------------------------------------------- *)
type t.
pred p : t.

(* -------------------------------------------------------------------- *)
lemma L: forall x1, p x1 => forall x2 x3, p x2 => p x3.
proof.
  move=> x1 {x1}.
  admit.
qed.
